Updates to template

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Project Name</title>
   </head>
   <body>
-    <p>Hello, World!</p>
+    <p>Hello, World from sunny St Pete!</p>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
